--- a/app.json
+++ b/app.json
@@ -11,7 +11,7 @@
         "maker",
         "generator"
     ],
-    "repository": "https://github.com/AbirHasan2005/Heroku-app.json",
+    "repository": "https://github.com/wajirr4/Heroku-app.json",
     "website": "https://github.com/AbirHasan2005/Heroku-app.json",
     "success_url": "https://t.me/HerokuAppJson_Bot",
     "env": {
